macros/tests/examples/matrix4.stderr
error: unexpected character '>'
  --> tests/examples/matrix4.rs:10:21
   |
10 |     matrix![ 1 , 2 ,> 3 |
   |                     ^
